src/objects/pse__Resource_Request__c.object
<CustomObject>
    <customHelpPage>pse__ResourceRequestHelp</customHelpPage>
    <description>Operating as a means of asking for resources to staff an existing or planned project, resource requests collect information to help users responsible for staffing and assignment creation to choose the right resource. The user requesting the resource (e.g., project manager or sales professional) may create a resource request from an opportunity or project, or generate them based on project tasks and project task assignments. Held resource requests, or “soft bookings”, occur when a named resource has been reserved for a project or opportunity, but not yet assigned to the project.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>OWF-MC-ESPSFDCQI-2931-This field is part of the OWF Process.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Assignment_Notes__c</fullName>
        <description>OWF - The reason why assignment from the initial bid is not copied on this Resource Request is mentioned here. The field will be populated only on re-clinical resource requests on which assignment could not be auto-created.</description>
        <inlineHelpText>The reason why assignment from the initial bid is not copied on this Resource Request is mentioned here. The field will be populated only on re-clinical resource requests on which assignment could not be auto-created.</inlineHelpText>
        <label>Auto Assignment Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BD_Lead_Sub_Region__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2896-This field is part of the OWF Process.</description>
        <formula>pse__Project__r.Bid_History__r.Bid_History_Related_Opportunity__r.BD_Lead_Sub_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BD Lead Sub Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid_Category__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2183 - This field is part of the OWF Process.</description>
        <label>Bid Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Early Engagement Bid</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>RFI</fullName>
                </value>
                <value>
                    <fullName>Post Award</fullName>
                </value>
                <value>
                    <fullName>Clinical Bid</fullName>
                </value>
                <value>
                    <fullName>CSS</fullName>
                </value>
                <value>
                    <fullName>CSS Bid</fullName>
                </value>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Non-RFP</fullName>
                </value>
                <value>
                    <fullName>Preferred Provider</fullName>
                </value>
                <value>
                    <fullName>Prelim Agreement</fullName>
                </value>
                <value>
                    <fullName>RFI Request</fullName>
                </value>
                <value>
                    <fullName>Re-Bid</fullName>
                </value>
                <value>
                    <fullName>Tech Solutions Support Request</fullName>
                </value>
                <value>
                    <fullName>Contract Post Award</fullName>
                </value>
                <value>
                    <fullName>Ballpark</fullName>
                    <isActive>false</isActive>
                    <label>Ballpark</label>
                </value>
                <value>
                    <fullName>Bid Defense</fullName>
                    <isActive>false</isActive>
                    <label>Bid Defense</label>
                </value>
                <value>
                    <fullName>Full Feasibility</fullName>
                    <isActive>false</isActive>
                    <label>Full Feasibility</label>
                </value>
                <value>
                    <fullName>Non-RFP Other</fullName>
                    <isActive>false</isActive>
                    <label>Non-RFP Other</label>
                </value>
                <value>
                    <fullName>Non-RFP Partnership</fullName>
                    <isActive>false</isActive>
                    <label>Non-RFP Partnership</label>
                </value>
                <value>
                    <fullName>Non-compete</fullName>
                    <isActive>false</isActive>
                    <label>Non-compete</label>
                </value>
                <value>
                    <fullName>Prospecting with a Partner</fullName>
                    <isActive>false</isActive>
                    <label>Prospecting with a Partner</label>
                </value>
                <value>
                    <fullName>RFP</fullName>
                    <isActive>false</isActive>
                    <label>RFP</label>
                </value>
                <value>
                    <fullName>Therapeutic Area</fullName>
                    <isActive>false</isActive>
                    <label>Therapeutic Area</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bid_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>OWF - IQVIAPSA-3950 - Lookup to Bid History</description>
        <label>Bid History</label>
        <referenceTo>Bid_History__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Bid_History_Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Deliverable__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2247</description>
        <formula>TEXT( Bid_History__r.Budget_Deliverable__c )</formula>
        <label>Budget Deliverable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Comments__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2129</description>
        <label>Cancellation Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2129-This field is part of the OWF Process.</description>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Criteria not met</fullName>
                </value>
                <value>
                    <fullName>Triaged to other group</fullName>
                </value>
                <value>
                    <fullName>Duplicate Request</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Order_Number__c</fullName>
        <description>USNONE - ID of the Change Order (from the QIP)</description>
        <inlineHelpText>ID of the Change Order (from the QIP)</inlineHelpText>
        <label>Change Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closure_Reason__c</fullName>
        <label>Closure Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complexity_Score_Total__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2896-This field is part of the OWF Process.</description>
        <label>Complexity Score Total</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Countries__c</fullName>
        <inlineHelpText>To select all countries please select one country and press Ctrl Key + A.</inlineHelpText>
        <label>Countries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>SubGroup__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>Romania</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Slovakia</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Sweden</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>PSA-CLD-USNONE - Country of the requested resource</description>
        <inlineHelpText>Country of the requested resource</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CountryCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours_per_FTE__c</fullName>
        <description>PSA-CLD-IQVIAPSA-2778 The number of hours per FTE</description>
        <label>Hours per FTE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indication__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2896-This field is part of the OWF Process.</description>
        <formula>pse__Project__r.Bid_History__r.Bid_History_Related_Opportunity__r.Indication__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indication</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Bid_Defense__c</fullName>
        <defaultValue>false</defaultValue>
        <description>OWF-MC-ESPSFDCQI-3042-This field is part of the OWF Process.</description>
        <label>Is Bid Defense</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Created_Automatically_Initial_Bid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IQVIAPSA-3401 - OWF - Provide CPQ Team with Automatic RR Creation Data for Initial Bid</description>
        <label>Is Created Automatically (Initial Bid)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Created_Automatically__c</fullName>
        <defaultValue>false</defaultValue>
        <description>OWF-MC-ESPSFDCQI-4387 - If this is true then it denotes that the RR is created automatically</description>
        <inlineHelpText>If this is true then it denotes that the Resource Request is created automatically</inlineHelpText>
        <label>Is Created Automatically</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Grade__c</fullName>
        <description>PSA-CLD-USNONE - Job Grade of Resource Request</description>
        <inlineHelpText>Job Grade of Resource Request</inlineHelpText>
        <label>Job Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Job_Grade</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadSupportFlag__c</fullName>
        <description>OWF-MC-ESPSFDCQI-5140</description>
        <label>Lead/Support Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>Used to identify the ID of this record in its source system (for data migration).</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to identify the ID of this record in its source system (for data migration).</inlineHelpText>
        <label>Legacy ID</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <formula>TEXT(pse__Project__r.Bid_History__r.Bid_History_Related_Opportunity__r.Line_of_Business__c)</formula>
        <label>Line of Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2131</description>
        <formula>pse__Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2247</description>
        <formula>pse__Opportunity__r.Opportunity_Number__c</formula>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2247</description>
        <formula>pse__Opportunity__r.Owner.FirstName + &apos; &apos;+  pse__Opportunity__r.Owner.LastName</formula>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>OWF- It holds the resource name who was assigned on the corresponding Resource Request on Initial Bid</description>
        <inlineHelpText>It holds the resource name who was assigned on the corresponding Resource Request on Initial Bid</inlineHelpText>
        <label>Original Assignee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Resource Requests (Original Assignee)</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Group__c</fullName>
        <label>Parent Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>CMSVC</fullName>
                </value>
                <value>
                    <fullName>COE</fullName>
                </value>
                <value>
                    <fullName>CSMS</fullName>
                </value>
                <value>
                    <fullName>CTE-STS</fullName>
                </value>
                <value>
                    <fullName>DSB</fullName>
                </value>
                <value>
                    <fullName>GBO</fullName>
                </value>
                <value>
                    <fullName>LCS</fullName>
                </value>
                <value>
                    <fullName>MBR</fullName>
                </value>
                <value>
                    <fullName>MedTech</fullName>
                </value>
                <value>
                    <fullName>RADDS</fullName>
                </value>
                <value>
                    <fullName>RW</fullName>
                </value>
                <value>
                    <fullName>SPN</fullName>
                </value>
                <value>
                    <fullName>Tech Solutions</fullName>
                </value>
                <value>
                    <fullName>TSL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potential_Regions__c</fullName>
        <description>OWF-QI-US-2761 - This field is part of the OWF Process.</description>
        <label>Potential Regions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Europe/Middle East/Africa EMEA</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>India Only</fullName>
                </value>
                <value>
                    <fullName>USA/Canada</fullName>
                </value>
                <value>
                    <fullName>Europe/Middle East/ Africa EMEA</fullName>
                    <isActive>false</isActive>
                    <label>Europe/Middle East/ Africa EMEA</label>
                </value>
                <value>
                    <fullName>Not recorded - CRM Support Update</fullName>
                    <isActive>false</isActive>
                    <label>Not recorded - CRM Support Update</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>OWF-MC-ESPSFDCQI-4431-Allows a TM to select a preferred resource to use.</description>
        <inlineHelpText>Triage Managers can enter the name of resource on initial bid&apos;s Resource Request. This resource will be preferred for assignment on rebids.</inlineHelpText>
        <label>Preferred Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Resource Requests (Preferred Resource)</relationshipLabel>
        <relationshipName>Resource_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA-CLD-USNONE - The PM of the project.  Set on the resource request by trigger so that workflow rules can have access to the project manager field.</description>
        <inlineHelpText>The PM of the project.  Set on the resource request by trigger so that workflow rules can have access to the project manager field.</inlineHelpText>
        <label>Project Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Resource Requests (Contact)</relationshipLabel>
        <relationshipName>Resource_RequestsPM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal_Deliverable__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2247</description>
        <formula>TEXT( Bid_History__r.Proposal_Deliverable__c)</formula>
        <label>Proposal Deliverable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFP_Ranking__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2247</description>
        <formula>TEXT( Bid_History__r.RFP_Ranking__c )</formula>
        <label>RFP Ranking</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Analytics_Country__c</fullName>
        <label>Global Analytics Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Citeline</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>CPJ</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>DIPA e360</fullName>
                </value>
                <value>
                    <fullName>DIPA Patient Funnel</fullName>
                </value>
                <value>
                    <fullName>DTP Funnel</fullName>
                </value>
                <value>
                    <fullName>EP&amp;T Champion</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Marketing Ops</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Monte Carlo Simulations</fullName>
                </value>
                <value>
                    <fullName>MIDAS</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_FTE__c</fullName>
        <description>PSA-CLD-IQVIAPSA-2778 The amount of FTE needed for this request (1.0 is full time)</description>
        <inlineHelpText>The amount of FTE needed for this request (1.0 is full time)</inlineHelpText>
        <label>Requested FTE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_Turnaround_Time__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2896-This field is part of the OWF Process.</description>
        <formula>CASE(MOD(DATEVALUE(CreatedDate) - DATE(1985,6,24),7), 
  0 , CASE( MOD( Bid_History__r.Bid_Due_Date__c - DATEVALUE(CreatedDate),7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Bid_History__r.Bid_Due_Date__c - DATEVALUE(CreatedDate),7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Bid_History__r.Bid_Due_Date__c - DATEVALUE(CreatedDate),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Bid_History__r.Bid_Due_Date__c - DATEVALUE(CreatedDate),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Bid_History__r.Bid_Due_Date__c - DATEVALUE(CreatedDate),7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Bid_History__r.Bid_Due_Date__c - DATEVALUE(CreatedDate),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Bid_History__r.Bid_Due_Date__c - DATEVALUE(CreatedDate),7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Bid_History__r.Bid_Due_Date__c - DATEVALUE(CreatedDate) )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Turnaround Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resource_Request_Type__c</fullName>
        <description>OWF-MC-ESPSFDCQI-3042-This field is part of the OWF Process.</description>
        <formula>IF(

Is_Bid_Defense__c = TRUE, &quot;Bid Defense&quot;,

IF(
AND(Bid_History__r.RecordType.DeveloperName = &quot;Clinical_Bid&quot;, OR(ISPICKVAL(Bid_History__r.Budget_Deliverable__c, &quot;Rounded Ballpark&quot;),ISPICKVAL(Bid_History__r.Budget_Deliverable__c, &quot;Price per Patient Range&quot;)),
Bid_History__r.Bid_Number__c &lt;= 1), &quot;Clinical - Ballpark&quot;,

IF(
AND(Bid_History__r.RecordType.DeveloperName = &quot;Clinical_Bid&quot;, NOT(ISPICKVAL(Bid_History__r.Budget_Deliverable__c, &quot;Rounded Ballpark&quot;)),
NOT(ISPICKVAL(Bid_History__r.Budget_Deliverable__c, &quot;Price per Patient Range&quot;)),
Bid_History__r.Bid_Number__c &lt;= 1), &quot;Clinical&quot;,
IF(
AND(Bid_History__r.RecordType.DeveloperName = &quot;CSMS_Bid&quot;, OR(ISPICKVAL(Bid_History__r.Budget_Deliverable__c, &quot;Rounded Ballpark&quot;),ISPICKVAL(Bid_History__r.Budget_Deliverable__c, &quot;Price per Patient Range&quot;)),
Bid_History__r.Bid_Number__c &lt;= 1), &quot;CSMS - Ballpark&quot;,

IF(
AND(Bid_History__r.RecordType.DeveloperName = &quot;CSMS_Bid&quot;, NOT(ISPICKVAL(Bid_History__r.Budget_Deliverable__c, &quot;Rounded Ballpark&quot;)),
NOT(ISPICKVAL(Bid_History__r.Budget_Deliverable__c, &quot;Price per Patient Range&quot;)),
Bid_History__r.Bid_Number__c &lt;= 1), &quot;CSMS&quot;,

IF(AND(Bid_History__r.Bid_Number__c &gt; 1,Bid_History__r.RecordType.DeveloperName = &quot;Clinical_Bid&quot;), &quot;Re-Clinical&quot;,
IF(AND(Bid_History__r.Bid_Number__c &gt; 1,Bid_History__r.RecordType.DeveloperName = &quot;CSMS_Bid&quot;), &quot;Re-CSMS&quot;,

IF(Bid_History__r.RecordType.DeveloperName = &quot;Tech_Solutions_Support_Request&quot;, &quot;Tech Solutions Support Request&quot;,
IF(Bid_History__r.RecordType.DeveloperName = &quot;Early_Engagement_Bid&quot;, &quot;Early Engagement&quot;,
IF(Bid_History__r.RecordType.DeveloperName = &quot;Non_RFP_Bid&quot;, &quot;Non-RFP&quot;,
IF(Bid_History__r.RecordType.DeveloperName = &quot;RFI_Request&quot;, &quot;RFI&quot;,
IF(Bid_History__r.RecordType.DeveloperName = &quot;Contract_Post_Award&quot;, &quot;Contract Post Award&quot;,
IF(Bid_History__r.RecordType.DeveloperName = &quot;Post_Award_Bid&quot;, &quot;Post Award&quot;,
IF(AND(Bid_History__r.Bid_Number__c = 1,Bid_History__r.RecordType.DeveloperName = &quot;CSS_Bid&quot;), &quot;CSS&quot;,
IF(AND(Bid_History__r.Bid_Number__c &gt; 1,Bid_History__r.RecordType.DeveloperName = &quot;CSS_Bid&quot;), &quot;CSS Rebid&quot;,&quot;&quot;))))))))))

)

)

)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource Request Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Select_Analysis__c</fullName>
        <description>IQVIAPSA-9097</description>
        <inlineHelpText>Applicable only for Analytics team</inlineHelpText>
        <label>Select Analysis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CTAS</fullName>
                </value>
                <value>
                    <fullName>EP&amp;T</fullName>
                </value>
                <value>
                    <fullName>CTDI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Line_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA-CLD-USNONE - The service line Lead of the service line project associated with this resource request</description>
        <inlineHelpText>The service line Lead of the service line project associated with this resource request</inlineHelpText>
        <label>Service Line Lead</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Resource Requests (Service Line Manager)</relationshipLabel>
        <relationshipName>Resource_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Line__c</fullName>
        <description>PSA-CLD-USNONE - Lookup to Service Line Project - Service Line</description>
        <formula>pse__Project__r.Service_Line__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lookup to Service Line Project - Service Line</inlineHelpText>
        <label>Service Line</label>
        <type>Text</type>
    </fields>
</CustomObject>